--- a/app/src/main/res/layout/activity_record_screen.xml
+++ b/app/src/main/res/layout/activity_record_screen.xml
@@ -8,12 +8,11 @@
 
     <SurfaceView
         android:id="@+id/sv_preview"
-        android:layout_width="240dp"
-        android:layout_height="320dp"
-        android:layout_marginTop="88dp"
-        android:background="#000000"
+        android:layout_width="270dp"
+        android:layout_height="480dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -21,7 +20,7 @@
         android:id="@+id/btn_start_record"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="236dp"
+        android:layout_marginBottom="160dp"
         android:text="开始录屏"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -32,13 +31,11 @@
         android:id="@+id/btn_stop_record"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="132dp"
+        android:layout_marginTop="24dp"
         android:text="结束录屏"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_start_record"
-        app:layout_constraintVertical_bias="0.33" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_start_record" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
